--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,11 @@ dist
 
 # TernJS port file
 .tern-port
+
+# custom
+/node_modules
+test_token.json
+config/config.json
+config_live/
+cache/*
+!cache/dummyfile
