--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ name: Deploy
 
 on:
   push:
-    branches: [ ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -25,23 +25,26 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # - name: Use Node.js ${{ matrix.node-version }}
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     node-version: ${{ matrix.node-version }}
 
-      - name: Update 3rd party docker containers
-        run: docker-compose pull
+      - name: Test Server
+        run: docker run hello-world
+      # # - name: Use Node.js ${{ matrix.node-version }}
+      # #   uses: actions/setup-node@v2
+      # #   with:
+      # #     node-version: ${{ matrix.node-version }}
 
-      - name: Build app
-        run: docker-compose build
+      # - name: Update 3rd party docker containers
+      #   run: docker-compose pull
 
-      # - name: Spin up DB
-      #   run: docker-compose up -d db
+      # - name: Build app
+      #   run: docker-compose build
 
-      # - name: Update DB structure
-      #   run: npm i sequelize-cli
-      #   run: sequelize db:migrate
+      # # - name: Spin up DB
+      # #   run: docker-compose up -d db
 
-      - name: Spin up containers
-        run: docker-compose up -d
+      # # - name: Update DB structure
+      # #   run: npm i sequelize-cli
+      # #   run: sequelize db:migrate
+
+      # - name: Spin up containers
+      #   run: docker-compose up -d
