--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,8 @@
 version: '3.3'
 services:
-  bot_gb:
+  app:
     build:
       context: ./
-    depends_on:
-      - db_gb
     restart: always
     environment:
       BotToken: ${DISCORD_BOT_TOKEN}
-      DBHost: db_gb
-      DBName: gurglebot
-      DB_user: gurglebot
-      DBPassw: ${DB_PASSWORD}
-  db_gb:
-    image: mariadb:latest
-    restart: always
-    ports:
-      - "${DB_PORT}:3306"
-    volumes:
-      - db_data:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD_ROOT}
-      MYSQL_DATABASE: gurglebot
-      MYSQL_USER: gurglebot
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-
-volumes:
-  db_data:
