--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "mysql2": "^2.2.5",
     "pretty-ms": "^5.1.0",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6",
-    "sequelize": "^5.22.3"
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "eslint": "^8.7.0",
