[uncomment] enabled bot deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,26 +22,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      # - name: Use Node.js ${{ matrix.node-version }}
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: ${{ matrix.node-version }}
 
-      - name: Test Server
-        run: docker run hello-world
-      # # - name: Use Node.js ${{ matrix.node-version }}
-      # #   uses: actions/setup-node@v2
-      # #   with:
-      # #     node-version: ${{ matrix.node-version }}
+      - name: Update 3rd party docker containers
+        run: docker-compose pull
 
-      # - name: Update 3rd party docker containers
-      #   run: docker-compose pull
+      - name: Build app
+        run: docker-compose build
 
-      # - name: Build app
-      #   run: docker-compose build
-
-      # # - name: Spin up DB
-      # #   run: docker-compose up -d db
-
-      # # - name: Update DB structure
-      # #   run: npm i sequelize-cli
-      # #   run: sequelize db:migrate
-
-      # - name: Spin up containers
-      #   run: docker-compose up -d
+      - name: Spin up containers
+        run: docker-compose up -d
