--- a/package.json
+++ b/package.json
@@ -20,11 +20,7 @@
   "dependencies": {
     "discord.js": "^12.3.1",
     "jsdom": "^16.6.0",
-    "moment": "^2.29.1",
-    "mysql2": "^2.2.5",
-    "pretty-ms": "^5.1.0",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "eslint": "^8.7.0",
