--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "name": "GurgleBot",
-    "prefix": "g!",
+    "name": "Aseivadae",
+    "prefix": "a!",
     "lang": "en_EN",
     "setup": {
         "logStatusChannel": "470889870160822273",
