added env file config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,9 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "GurgleBot",
-            "program": "${workspaceFolder}/index.js"
+            "name": "Aseivadae",
+            "program": "${workspaceFolder}/index.js",
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
