--- a/config.json
+++ b/config.json
@@ -1,65 +1,14 @@
 {
     "name": "Aseivadae",
-    "prefix": "a!",
-    "lang": "en_EN",
+    "prefix": "a?",
     "setup": {
-        "logStatusChannel": "470889870160822273",
-        "roleRequest": {
-            "channelID": "669278640667623434",
-            "unique": ["300980508899278848", "300980566386540544", "300980426548445186"],
-            "roles": [
-                {
-                    "name": "Prey",
-                    "roleID": "300980508899278848",
-                    "emoji": "🦌",
-                    "mature": false
-                },
-                {
-                    "name": "Prey/Pred",
-                    "roleID": "300980566386540544",
-                    "emoji": "🔄",
-                    "mature": false
-                },
-                {
-                    "name": "Pred",
-                    "roleID": "300980426548445186",
-                    "emoji": "🐉",
-                    "mature": false
-                },
-                {
-                    "name": "NSFW Access",
-                    "roleID": "573614662445301772",
-                    "emoji": "🔞",
-                    "mature": true
-                },
-                {
-                    "name": "NSFL Access",
-                    "roleID": "333646914757197824",
-                    "emoji": "💩",
-                    "mature": true
-                },
-                {
-                    "name": "Vent Access",
-                    "roleID": "615218706657574952",
-                    "emoji": "💨",
-                    "mature": true
-                },
-                {
-                    "name": "Notifications Role",
-                    "roleID": "794658961076125726",
-                    "emoji": "📬",
-                    "mature": false
-                }
-            ]
-        },
         "moduleFolders": {
             "functionsFolder": "functions",
             "commandsFolder": "commands"
         },
         "startupFunctions": [
             "STARTUP_initCommands",
-            "STARTUP_initFunctions",
-            "STARTUP_envPrep"
+            "STARTUP_initFunctions"
         ],
         "setupFunctions": [ "SETUP_status" ]
     },
@@ -71,23 +20,10 @@
         },
         "categoryID": "750432209420156968",
         "welcomeChannel": "496962434917990410",
-        "archiveChannel": "864936989400236072",
-        "checkinRole": "345333709391659009"
+        "archiveChannel": "disabled",
+        "checkinRole": "932062131359207487"
     },
     "aboutText": "./config/about.txt",
     "teamRole": "300661482830561281",
-    "info_channelID": "496948681656893440",
-    "punnishments": {
-        "pointLifetime": 20000
-    },
-    "DoBchecking": {
-        "dateFormats": ["YYYY-MM-DD", "MM/DD/YYYY"],
-        "logChannelID": "574178926985740288"
-    },
-    "disboard": {
-        "channelID": "782260178925387786",
-        "userID": "302050872383242240",
-        "lastBoostedRoleID": "783082303478825001",
-        "successfulHex": "#24b7b7"
-    }
+    "info_channelID": "496948681656893440"
 }
