added error handler

--- a/config.json
+++ b/config.json
@@ -24,5 +24,6 @@
         "checkinRole": "932062131359207487"
     },
     "aboutText": "./config/about.txt",
-    "teamRole": "932062876250804294"
+    "teamRole": "932062876250804294",
+    "logChannel": "933524154479689778"
 }
