--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/FlippedCodes/Aseivadae#readme",
   "dependencies": {
-    "discord.js": "^12.3.1",
+    "@discordjs/builders": "^1.7.0",
+    "discord.js": "^14.14.1",
     "jsdom": "^16.6.0",
     "moment": "^2.29.1"
   },
