--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,12 @@
 {
     "env": {
+        "commonjs": true,
         "es2021": true,
         "node": true
     },
-    "extends": [
-        "airbnb-base"
-    ],
+    "extends": "airbnb-base",
     "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+        "ecmaVersion": "latest"
     },
     "rules": {
         "consistent-return": 0,
