add feature link replace

--- a/config.json
+++ b/config.json
@@ -18,5 +18,76 @@
         "archiveChannel": "934144110451892224",
         "checkinRole": "932062131359207487"
     },
-    "logChannel": "933524154479689778"
+    "logChannel": "933524154479689778",
+    "linkReplace": {
+        "checkChannels": [
+            "Valley of Dragons",
+            "928874756218961931",
+            "933199306624741396",
+            "932509675637837874",
+            "928875211271581736",
+            "928875535495491584",
+            "945499367626907688",
+            "932414681841303622",
+            "932434024729813092",
+            "928875789418647573",
+            "928876664002338846",
+            "1053419685741351033",
+            "1117551391641194578",
+            "928876682805391370",
+            "928876741081043015",
+            "928876817803268127",
+            "1055978237458649178",
+            "928876836027523072",
+            "933200513233743902",
+            "933200981158682647",
+
+            "Local Noven Belly Plaza (Personal server)",
+            "645676971648483339",
+            "645963389872373764",
+            "645838815382077462",
+            "665232105218768899",
+            "1113096005718650900",
+            "650856243631489054",
+            "1138280907548143616",
+            "645764829747085344",
+            "1138280632976420905",
+            "645828895689670656",
+            "645963920409886750",
+            "780844409872187392",
+            "645838287650684947",
+            "801649244658073680",
+            "1138525498100690984",
+            "1145416749961973890",
+            "645765737608380433",
+            "1161672584803401868",
+            "645765791974686750"
+        ],
+        "links": [
+            {
+                "search": "www.furaffinity.net/view",
+                "replace": "fxfuraffinity.net/view"
+            },
+            {
+                "search": "//furaffinity.net/view",
+                "replace": "//fxfuraffinity.net/view"
+            },
+            {
+                "search": "www.furaffinity.net/full",
+                "replace": "fxfuraffinity.net/full"
+            },
+            {
+                "search": "//furaffinity.net/full",
+                "replace": "//fxfuraffinity.net/full"
+            },
+            {
+                "search": "//twitter.com",
+                "replace": "//vxtwitter.com"
+            },
+            {
+                "search": "//x.com",
+                "replace": "//vxtwitter.com"
+            }
+        ]
+    }
 }
